welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: not found: value vuBiscuit
		vuBiscuit()=true
                ^Program:9: error: not found: value vuBiscuit
return vuBiscuit()
       ^